Fix spacing in sidebar

--- a/theme/gigasci/test.css
+++ b/theme/gigasci/test.css
@@ -107,26 +107,32 @@ li a:hover {
 /* Side Bar */
 
 .sidebar-title {
-    font-weight: 300;
-    font-size: 1.5em;
-    padding-top: 40px;
-    /*padding-bottom: 20px;*/
     border-top: 2px solid #079347;
-    /*border-bottom: 1px solid #e2e4e2;*/
+    padding-top: 30px;
+    font-weight: 300;
+    font-size: 1.25em;
 }
 
 .sidebar-content {
     font-weight: 300;
     font-size: 1.0em;
-    /*padding-top: 10px;*/
-    padding-bottom: 20px;
-    /*border-bottom: 1px solid #e2e4e2;*/
+    padding-bottom: 30px;
 }
 
 .sidebar-author {
     padding-top: 90px;
     font-weight: 300;
     text-align: center;
+}
+
+.archive-months {
+    font-size: 1.0em;
+    padding-bottom: 10px;
+}
+
+.popular-tags {
+    font-size: 1.0em;
+    padding-bottom: 30px;
 }
 
 .avatar {
